color contrast fix

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -429,7 +429,7 @@ body {
 }
 
 .skip-to-content-link {
-  background: #e77e23;
+  background: #000000;
   height: 30px;
   left: 50%;
   padding: 8px;
